sacados get first. y last